@@ -140,9 +140,6 @@ issues you find at
 </p>
   
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
-    
-
-
 
         Release Notes - UIMA - Version 2.3S
         
@@ -310,6 +307,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1613'>UIMA-1613</a>] -         run Rat consistently for all maven assemblies
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1642'>UIMA-1642</a>] -         Regex rule file parameter should allow wildcard expressions when using the datapath to locate rule files
+</li>
 </ul>
     
 <h2>        New Feature
@@ -350,6 +349,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1469'>UIMA-1469</a>] -         Add Lucas to the sandbox home page
 </li>
 </ul>
+
 
 
                         
