@@ -114,7 +114,6 @@ issues you find at http://issues.apache.org/jira/browse/uima.
 
 Release Notes - UIMA - Version 2.3S
 
-
 ** Bug
     * [UIMA-860] - Add source-style LICENSE and NOTICE files at "root"s of UIMA
     * [UIMA-990] - change POM description for annotator package POMs
@@ -196,6 +195,7 @@ Release Notes - UIMA - Version 2.3S
     * [UIMA-1594] - make sandbox assembly build like base and uima-as builds
     * [UIMA-1610] - add a changeVersion build tool to handle changes needed in sandbox release 
     * [UIMA-1613] - run Rat consistently for all maven assemblies
+    * [UIMA-1642] - Regex rule file parameter should allow wildcard expressions when using the datapath to locate rule files
 
 ** New Feature
     * [UIMA-880] - Make PEAR installation path configurable in web.xml
@@ -219,4 +219,5 @@ Release Notes - UIMA - Version 2.3S
 
 ** Wish
     * [UIMA-1469] - Add Lucas to the sandbox home page
+
 
